--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .container{
 	height: 100vh;
 	width: 100%;
-	background-image: url(media/vimage.jpg);
+	background-image: url(vimage.jpg);
 	background-position: center;
 	background-size: cover;
 	position: relative;
